@@ -2,6 +2,10 @@ Changelog for CMFFormController
 
     (name of developer listed in brackets)
 
+    - Fix issue with usage of relative urls for action traversal, rather than
+      actual physical paths, which are necessary.
+      [alecm]
+
 CMFFormController 2.0.3 - Released June 9, 2006
 
     - Fix issue with redirecting/traversing to FTI actions which are defined
